# arc

./: CHANGELOG.md  LICENSE  README.md  arc.cabal  example.arc
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: AST.hs  ArcInt.hs  Evaluator.hs  Parser.hs  StateM.hs
